# nobiscuit

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack.config.js
.claude/: session-progress.md
.github/workflows/: release.yml
crates/nobiscuit-cli/: Cargo.toml
crates/nobiscuit-cli/src/: game.rs  input.rs  main.rs  maze.rs  minimap.rs  nob_map.rs  nobiscuit_map.rs  player.rs  scene.rs  terminal.rs  textures.rs  tiles.rs  ui.rs
crates/nobiscuit-engine/: Cargo.toml
crates/nobiscuit-engine/src/: camera.rs  floor.rs  framebuffer.rs  lib.rs  map.rs  math.rs  ray.rs  renderer.rs  sprite.rs
docs/: architecture.md  game-design.md  specification.md
public/: index.html
src/: App.vue  background.ts  index.ts  preload.ts  shims-tsx.d.ts
src/background/: ipc_listener.ts  logger.ts
src/components/: Home.vue
src/game/: my_game.ts
src/game/scenes/: preload.ts  title.ts
src/game/utils/: image_util.ts  scene_util.ts  text_util.ts
src/scenes/: MazeScene.ts
src/utils/: MazeGenerator.ts  common.ts  js_logger.ts
