[workspace]
members = ["crates/nobiscuit-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
homepage = "https://github.com/kako-jun/nobiscuit"
repository = "https://github.com/kako-jun/nobiscuit"
readme = "README.md"
keywords = ["game", "tui", "raycasting", "maze", "terminal"]
categories = ["command-line-utilities", "games"]
exclude = [".github/", "target/"]
rust-version = "1.82.0"

[workspace.dependencies]
termray = { path = "../../2026/termray" }
crossterm = "0.28"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
