[package]
name = "nobiscuit-engine"
description = "Pure raycasting engine for TUI 3D rendering — no external dependencies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
